Can now delete record

--- a/public/views/partials/editToolbar.html
+++ b/public/views/partials/editToolbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-default navbar-fixed-top toolbar" role="navigation">
     <div class="container">
         <button type="button" class="btn btn-default navbar-btn">Save</button>
-        <button type="button" class="btn btn-default navbar-btn">Delete</button>
+        <button type="button" class="btn btn-default navbar-btn" ng-click="ctrl.delete()">Delete</button>
     </div>
 </nav>
