--- a/public/views/input.html
+++ b/public/views/input.html
@@ -6,7 +6,8 @@
         <div class="row">
             <div class="form-group col-sm-8">
                 <label>Function Name</label>
-                <input class="form-control" type="text" ng-model="ctrl.fn.name">
+                <input class="form-control" type="text" ng-hide="ctrl.id" ng-model="ctrl.fn.name">
+                <p class="form-control-static" ng-show="ctrl.id">{{ctrl.fn.name}}</p>
             </div>
             
             <div class="form-group col-sm-4">
